# AdvancedLiterateMachinery

DocumentUnderstanding/VGT/: pyproject.toml
DocumentUnderstanding/VGT/object_detection/Configs/cascade/: doclaynet_VGT_cascade_PTM.yaml
